@@ -33,8 +33,11 @@ Version 1.6.14beta01 [September 14, 2014]
   Add "#include <setjmp.h>" to contrib/tools/pngfix.c (John Bowler)
 
 Version 1.6.14beta02 [September 14, 2014]
+  Use nanosleep() instead of usleep() in contrib/gregbook/rpng2-x.c
+    because usleep() is deprecated.
   Define usleep() in contrib/gregbook/rpng2-x.c if not already defined
-    in unistd.h; fixes error introduced in libpng-1.6.13.
+    in unistd.h and nanosleep() is not available; fixes error introduced
+    in libpng-1.6.13.
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
